# dartrs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: generation.rs  lib.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
