[package]
name = "dartrs"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dartrs"
crate-type = ["lib"]


[dependencies]
anyhow = "1.0.102"
candle-core = "0.10.2"
candle-flash-attn = { version = "0.10.2", optional = true }
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = "0.5.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.23.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.79", features = ["vendored"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
flash-attn = ["dep:candle-flash-attn"]
